Try flicker fix

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -8,6 +8,8 @@ body {
   margin: 0rem;
   width: 100%;
   height: 100%;
+  transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   background: linear-gradient(-45deg, violet, indigo, blue, green, yellow, orange, red, violet);
@@ -27,6 +29,8 @@ canvas {
 
 .background-gradient {
   position: absolute;
+  transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   background: linear-gradient(-45deg, violet, indigo, blue, green, yellow, orange, red, violet);
@@ -294,6 +298,8 @@ canvas {
   background-image: repeating-linear-gradient(45deg, violet, indigo, blue, green, yellow, orange, red, violet);
   background-clip: text;
   color: transparent;
+  transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
   animation: rainbow 3000s alternate-reverse linear infinite;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
@@ -306,6 +312,8 @@ canvas {
   background-image: repeating-linear-gradient(45deg, #343d46 , #4f5b66 , #65737e , #a7adba , #c0c5ce, #343d46);
   background-clip: text;
   color: transparent;
+  transform: translate3d(0,0,0);
+  -webkit-transform: translate3d(0,0,0);
   animation: rainbow 3000s alternate-reverse linear infinite;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
